--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="css/main.css">
 
     <script src="js/anime.min.js"></script>
-    <script <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
 
-    </script>
 
   </head>
   <body>
