сетка телепередач с адаптивом

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		</div>
     <div class="menu">
       <h2>ЗОМБОЯЩИК</h2>
-      <h2>ТЕЛЕПРОГРАММА</h2>
-      <h2>ЖУРНАЛ</h2>
-      <h2>ВИДЕО</h2>
-      <h2>НОВОСТИ</h2>
-      <h2>О НАС</h2>
+      <h2><a href="pages/2/index.html">ТЕЛЕПРОГРАММА</a></h2>
+      <h2><a href="pages/3/index.html">ЖУРНАЛ</a></h2>
+      <h2><a href="pages/4/index.html">ВИДЕО</a></h2>
+      <h2><a href="pages/5/index.html">НОВОСТИ</a></h2>
+      <h2><a href="pages/6/index.html">О НАС</a></h2>
     </div>
 
 
@@ -153,17 +153,18 @@
       </div>
 
     </div>
+
     <div class="footter">
       <div class="left">
         <div class="line">
-          <p>Главная</p>
-          <p>Журнал</p>
-          <p>Контакты</p>
+          <p><a href="pages/4/index.html">Видео</a></p>
+          <p><a href="pages/3/index.html">Журнал</a></p>
+          <p><a href="pages/6/index.html">Контакты</a></p>
         </div>
         <div class="line">
-          <p>Новости</p>
-          <p>О нас</p>
-          <p>Телепрограмма</p>
+          <p><a href="pages/5/index.html">Новости</a></p>
+          <p><a href="pages/6/index.html">О нас</a></p>
+          <p><a href="pages/2/index.html">Телепрограмма</a></p>
         </div>
       </div>
       <div class="right">
