слайдер средней зажарки с болью

--- a/pages/3/index.html
+++ b/pages/3/index.html
@@ -20,46 +20,106 @@
     <div class="menu">
       <h2><a href="../../index.html">ЗОМБОЯЩИК</a></h2>
       <h2><a href="../2/index.html">ТЕЛЕПРОГРАММА</a></h2>
-      <h2>ЖУРНАЛ</a></h2>
-      <h2><a href="../4/index.html">ВИДЕО</h2>
+      <h2>ЖУРНАЛ</h2>
+      <h2><a href="../4/index.html">ВИДЕО</a></h2>
       <h2><a href="../5/index.html">НОВОСТИ</a></h2>
       <h2><a href="../6/index.html">О НАС</a></h2>
     </div>
 
-    <div class="slider">
-      <div class="slider__wrapper">
-        <div class="slider__item">
-          <div style="height: 250px;>1</div>
+    <div class="box">
+      <h1>ОНЛАЙН ЖУРНАЛ</h1>
+      <p>Каждый месяц наш телеканал выпускает гипнотический журнал с&nbsp;последними новостями компаниями, веселыми и&nbsp;познавательными рубриками и&nbsp;действующим расписанием телеканала. Вы&nbsp;по&nbsp;адресу, если вам интересно узнать о&nbsp;нам и&nbsp;о&nbsp;том, что с&nbsp;нами происходит!</p>
+      <h1>Апрельский выпуск журнала &laquo;ЗОМБОЯЩИК&raquo;</h1>
+      <div class="slider">
+        <div class="slider__wrapper">
+          <div class="slider__item">
+            <img src="../../img/3/1.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/2.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/3.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/4.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/5.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/6.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/7.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/8.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/9.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/10.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/11.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/12.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/13.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/14.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/15.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/16.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/17.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/18.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/19.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/20.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/21.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/22.jpg" >
+          </div>
+          <div class="slider__item">
+            <img src="../../img/3/23.jpg" >
+          </div>
         </div>
-        <div class="slider__item">
-          <div style="height: 250px; background: green;">2</div>
-        </div>
-        <div class="slider__item">
-          <div style="height: 250px; background: violet;">3</div>
-        </div>
-        <div class="slider__item">
-          <div style="height: 250px; background: coral;">4</div>
-        </div>
+
+        <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+        <a class="slider__control slider__control_left" href="#" role="button"></a>
       </div>
-      <a class="slider__control slider__control_left" href="#" role="button"></a>
-      <a class="slider__control slider__control_right" href="#" role="button"></a>
+      <p>Если хотите ознакомиться с&nbsp;более свежим выпуском журнала, вы&nbsp;можете оформить подписку на&nbsp;электронный или печатный формат журнала по&nbsp;телефону +7(999)123-45-67 или по&nbsp;почте zomboyachik@tv.ru</p>
     </div>
-
-
-
-
 
     <div class="footter">
       <div class="left">
-        <div class="line">
-          <p><a href="pages/4/index.html">Видео</a></p>
-          <p><a href="pages/3/index.html">Журнал</a></p>
-          <p><a href="pages/6/index.html">Контакты</a></p>
+        <div class="lineb">
+          <p><a href="../../index.html">Главная</a></p>
+          <p><a href="../2/index.html">Телепрограмма</a></p>
+          <p><a href="../6/index.html">Контакты</a></p>
         </div>
-        <div class="line">
-          <p><a href="pages/5/index.html">Новости</a></p>
-          <p><a href="pages/6/index.html">О нас</a></p>
-          <p><a href="pages/2/index.html">Телепрограмма</a></p>
+        <div class="lineb">
+          <p><a href="../5/index.html">Новости</a></p>
+          <p><a href="../6/index.html">О нас</a></p>
+          <p><a href="../4/index.html">Видео</a></p>
         </div>
       </div>
       <div class="right">
