--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
         <img src="img/magazin-previe.png" alt="анонс журнала">
         <div class="text1">
           <p>Ежемесячно мы&nbsp;выпускаем гипнотический журнал с&nbsp;последними новостями компаниями, веселыми и&nbsp;познавательными рубриками и&nbsp;действующим расписанием телеканала. <br>Если хотите ознакомиться с&nbsp;более свежим выпуском журнала, вы&nbsp;можете оформить подписку на&nbsp;электронный или печатный формат журнала по&nbsp;телефону +7(999)123-45-67 или по&nbsp;почте zomboyachik@tv.ru</p>
-          <div class="btn">
+          <a href="pages/3/index.html"><div class="btn">
             <h3>ЧИТАТЬ</h3>
-          </div>
+          </div></a>
 
         </div>
 
       </div>
-      <div class="btn-main">
+      <a href="pages/3/index.html#podpiska" ><div class="btn-main">
         <h3>ОФОРМИТЬ ПОДПИСКУ</h3>
-      </div>
+      </div></a>
 
     </div>
 
