--- a/pages/3/index.html
+++ b/pages/3/index.html
@@ -27,6 +27,11 @@
     </div>
 
     <div class="box">
+      <div class="ellipse1"></div>
+      <div class="ellipse2"></div>
+      <div class="ellipse4"></div>
+      <div class="ellipse5"></div>
+      <div class="ellipse6"></div>
       <h1>ОНЛАЙН ЖУРНАЛ</h1>
       <p>Каждый месяц наш телеканал выпускает гипнотический журнал с&nbsp;последними новостями компаниями, веселыми и&nbsp;познавательными рубриками и&nbsp;действующим расписанием телеканала. Вы&nbsp;по&nbsp;адресу, если вам интересно узнать о&nbsp;нам и&nbsp;о&nbsp;том, что с&nbsp;нами происходит!</p>
       <h1>Апрельский выпуск журнала &laquo;ЗОМБОЯЩИК&raquo;</h1>
@@ -106,17 +111,17 @@
         <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
         <a class="slider__control slider__control_left" href="#" role="button"></a>
       </div>
-      <p>Если хотите ознакомиться с&nbsp;более свежим выпуском журнала, вы&nbsp;можете оформить подписку на&nbsp;электронный или печатный формат журнала по&nbsp;телефону +7(999)123-45-67 или по&nbsp;почте zomboyachik@tv.ru</p>
+      <p id="podpiska">Если хотите ознакомиться с&nbsp;более свежим выпуском журнала, вы&nbsp;можете оформить подписку на&nbsp;электронный или печатный формат журнала по&nbsp;телефону +7(999)123-45-67 или по&nbsp;почте zomboyachik@tv.ru</p>
     </div>
 
     <div class="footter">
       <div class="left">
-        <div class="lineb">
+        <div class="line">
           <p><a href="../../index.html">Главная</a></p>
           <p><a href="../2/index.html">Телепрограмма</a></p>
           <p><a href="../6/index.html">Контакты</a></p>
         </div>
-        <div class="lineb">
+        <div class="line">
           <p><a href="../5/index.html">Новости</a></p>
           <p><a href="../6/index.html">О нас</a></p>
           <p><a href="../4/index.html">Видео</a></p>
