видео адаптив на планшет и телефон без кругов

--- a/index.html
+++ b/index.html
@@ -37,22 +37,21 @@
       <h1>ХИТЫ СЕЗОНА</h1>
       <div class="video-line">
         <div class="video">
-          <div class="gif1" alt="1 канал"></div>
-          <h4>Не думай</h4>
+          <a target="_blank" href="https://evgeniavishnevskaya.github.io/zom1/pages/01/index.html"><div class="gif1" alt="1 канал"></div></a>
+          <h4><a target="_blank" href="https://evgeniavishnevskaya.github.io/zom1/pages/01/index.html">Не думай</a></h4>
           <p>1 серия 4 сезон</p>
-          <p>546  просмотров</p>
+          <p>546 просмотров</p>
         </div>
         <div class="video">
-          <div class="gif2" alt="2 канал"></div>
-          <h4>Движение</h4>
+          <a target="_blank" href="https://evgeniavishnevskaya.github.io/zom1/pages/02/index.html"><div class="gif2" alt="2 канал"></div></a>
+          <h4><a target="_blank" href="https://evgeniavishnevskaya.github.io/zom1/pages/02/index.html">Движение</a></h4>
           <p>3 серия 1 сезон</p>
-          <p>1036  просмотров</p>
+          <p>1036 просмотров</p>
         </div>
-
       </div>
-      <div class="btn-main">
+      <a href="pages/4/index.html"><div class="btn-main">
         <h3>ВСЕ ВИДЕО</h3>
-      </div>
+      </div></a>
 
     </div>
     <div class="box2-color">
