исправила опечатку и добавила круги в видео

--- a/pages/3/index.html
+++ b/pages/3/index.html
@@ -33,7 +33,7 @@
       <div class="ellipse5"></div>
       <div class="ellipse6"></div>
       <h1>ОНЛАЙН ЖУРНАЛ</h1>
-      <p>Каждый месяц наш телеканал выпускает гипнотический журнал с&nbsp;последними новостями компаниями, веселыми и&nbsp;познавательными рубриками и&nbsp;действующим расписанием телеканала. Вы&nbsp;по&nbsp;адресу, если вам интересно узнать о&nbsp;нам и&nbsp;о&nbsp;том, что с&nbsp;нами происходит!</p>
+      <p>Каждый месяц наш телеканал выпускает гипнотический журнал с&nbsp;последними новостями компаниями, веселыми и&nbsp;познавательными рубриками и&nbsp;действующим расписанием телеканала. Вы&nbsp;по&nbsp;адресу, если вам интересно узнать о&nbsp;наc и&nbsp;о&nbsp;том, что с&nbsp;нами происходит!</p>
       <h1>Апрельский выпуск журнала &laquo;ЗОМБОЯЩИК&raquo;</h1>
       <div class="slider">
         <div class="slider__wrapper">
