--- a/pages/4/index.html
+++ b/pages/4/index.html
@@ -27,6 +27,13 @@
     </div>
 
     <div class="box1">
+      <div class="ellipse1"></div>
+      <div class="ellipse2"></div>
+      <div class="ellipse3"></div>
+      <div class="ellipse4"></div>
+      <div class="ellipse5"></div>
+      <div class="ellipse6"></div>
+      <div class="ellipse7"></div>
 
       <h1>ВСЕ ВИДЕО</h1>
       <div class="video-line">
