Отдельные страницы на каждую новость + кружочки и ко всем адаптивы

--- a/pages/5/index.html
+++ b/pages/5/index.html
@@ -27,16 +27,22 @@
     </div>
 
     <div class="box2">
+      <div class="ellipse1"></div>
+      <div class="ellipse2"></div>
+      <div class="ellipse3"></div>
       <div class="ellipse4"></div>
+      <div class="ellipse5"></div>
+      <div class="ellipse6"></div>
+      <div class="ellipse7"></div>
       <h1>НОВОСТИ ТЕЛЕКАНАЛА</h1>
       <div class="main-news">
         <img src="../../img/bignews.png" alt="главная новость">
         <div class="text1">
           <h4>Открытие нового офиса телеканала «ЗОМБОЯЩИК»</h4>
           <p>в&nbsp;апреле 2020&nbsp;года.<br>Особый вид здания делает данную постройку не&nbsp;только рабочим офисом, но&nbsp;и&nbsp;прекрасным местом для посещения фанатов. Познакомься с&nbsp;уникальной разработкой гипнотического предвижения по&nbsp;зданию. Прокатись на&nbsp;монорелься и&nbsp;познакомься с&nbsp;рабочим процессом телеканала. Как&nbsp;же он&nbsp;выглядит изнутри?</p>
-          <div class="btn">
+          <a href="news/1/index.html"><div class="btn">
             <h3>ПОСМОРЕТЬ</h3>
-          </div>
+          </div></a>
 
         </div>
       </div>
@@ -46,9 +52,9 @@
           <div class="text">
             <h4>Прошел курс тотального гипноза</h4>
             <p>29&nbsp;января 2020&nbsp;года.<br>Основной отчет о&nbsp;том как прошел курс и&nbsp;отзывы участников.<br>36&nbsp;человек приняли участие...</p>
-            <div class="btn">
+            <a href="news/2/index.html"><div class="btn">
               <h3>ПОСМОРЕТЬ</h3>
-            </div>
+            </div></a>
           </div>
         </div>
         <div class="news">
@@ -56,9 +62,9 @@
           <div class="text">
             <h4>Онлайн трансляции &laquo;Погрузись в&nbsp;себя&raquo;</h4>
             <p>29&nbsp;ноября 2019&nbsp;года.<br>Основной отчет о&nbsp;том как прошел курс и&nbsp;отзывы участников.&nbsp;360 человек приняли участие...</p>
-            <div class="btn">
+            <a href="news/3/index.html"><div class="btn">
               <h3>ПОСМОРЕТЬ</h3>
-            </div>
+            </div></a>
           </div>
         </div>
 
@@ -70,9 +76,9 @@
           <div class="text">
             <h4>Прошел курс тотального гипноза</h4>
             <p>29&nbsp;января 2020&nbsp;года.<br>Основной отчет о&nbsp;том как прошел курс и&nbsp;отзывы участников.</p>
-            <div class="btn">
+            <a href="news/4/index.html"><div class="btn">
               <h3>ПОСМОРЕТЬ</h3>
-            </div>
+            </div></a>
           </div>
         </div>
         <div class="news">
@@ -80,9 +86,9 @@
           <div class="text">
             <h4>Серия &laquo;Раскрой глаза&raquo;</h4>
             <p>Киноночь была посвящена самым выдающимся и&nbsp;завораживающим кинолентам последних...</p>
-            <div class="btn">
+            <a href="news/5/index.html"><div class="btn">
               <h3>ПОСМОРЕТЬ</h3>
-            </div>
+            </div></a>
           </div>
         </div>
 
@@ -94,9 +100,9 @@
           <div class="text">
             <h4>Лекция &laquo;Промой свой мозг&raquo;</h4>
             <p>29&nbsp;января 2020&nbsp;года.<br>Основной отчет о&nbsp;том как прошел курс и&nbsp;отзывы участников. 36&nbsp;человек приняли участие...</p>
-            <div class="btn">
+            <a href="news/6/index.html"><div class="btn">
               <h3>ПОСМОРЕТЬ</h3>
-            </div>
+            </div></a>
           </div>
         </div>
 
