о нас и контакты с адаптивом

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <div class="text1">
           <h4>Открытие нового офиса телеканала «ЗОМБОЯЩИК»</h4>
           <p>в&nbsp;апреле 2020&nbsp;года.<br>Особый вид здания делает данную постройку не&nbsp;только рабочим офисом, но&nbsp;и&nbsp;прекрасным местом для посещения фанатов. Познакомься с&nbsp;уникальной разработкой гипнотического предвижения по&nbsp;зданию. Прокатись на&nbsp;монорелься и&nbsp;познакомься с&nbsp;рабочим процессом телеканала. Как&nbsp;же он&nbsp;выглядит изнутри?</p>
-          <div class="btn">
+          <a href="pages/5/news/1/index.html"><div class="btn">
             <h3>ПОСМОРЕТЬ</h3>
-          </div>
+          </div></a>
 
         </div>
       </div>
@@ -83,9 +83,9 @@
           <div class="text">
             <h4>Прошел курс тотального гипноза</h4>
             <p>29&nbsp;января 2020&nbsp;года.<br>Основной отчет о&nbsp;том как прошел курс и&nbsp;отзывы участников.<br>36&nbsp;человек приняли участие...</p>
-            <div class="btn">
+            <a href="pages/5/news/2/index.html"><div class="btn">
               <h3>ПОСМОРЕТЬ</h3>
-            </div>
+            </div></a>
           </div>
         </div>
         <div class="news">
@@ -93,9 +93,9 @@
           <div class="text">
             <h4>Киноночь &laquo;Марафон хитов&raquo;</h4>
             <p>Киноночь была посвящена самым выдающимся и&nbsp;завораживающим кинолентам последних...</p>
-            <div class="btn">
+            <a href="pages/5/news/3/index.html"><div class="btn">
               <h3>ПОСМОРЕТЬ</h3>
-            </div>
+            </div></a>
           </div>
         </div>
 
@@ -103,23 +103,23 @@
       </div>
       <h1>СЕТКА НОВОСТЕЙ</h1>
       <div class="setka">
-        <div class="text-line">
+        <a href="pages/5/news/4/index.html"><div class="text-line">
           <p>24.12.2019</p>
           <p>Киноночь «Промой свой мозг»</p>
 
-        </div>
+        </div></a>
         <hr>
-        <div class="text-line">
+        <a href="pages/5/news/5/index.html"><div class="text-line">
           <p>20.12.2019</p>
           <p>Лекция «Раскрой глаза»</p>
 
-        </div>
+        </div></a>
         <hr>
-        <div class="text-line">
+        <a href="pages/5/news/6/index.html"><div class="text-line">
           <p>29.11.2019</p>
           <p>Трансляция «Погрузись в себя»</p>
 
-        </div>
+        </div></a>
         <hr>
 
       </div>
