--- a/pages/6/index.html
+++ b/pages/6/index.html
@@ -4,12 +4,117 @@
     <meta charset="utf-8">
     <title>Зомбоящик</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles.css">
 
     <script src="../../js/anime.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
   </head>
   <body>
+    <div class="tpl_hamburger" id="sandwichmenu">
+				<svg viewBox="0 0 800 600">
+					<path d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200" class="top"></path>
+					<path d="M300,320 L540,320" class="middle"></path>
+					<path d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190" class="bottom" transform="translate(480, 320) scale(1, -1) translate(-480, -318) "></path>
+				</svg>
+		</div>
+    <div class="menu">
+      <h2><a href="../../index.html">ЗОМБОЯЩИК</a></h2>
+      <h2><a href="../2/index.html">ТЕЛЕПРОГРАММА</a></h2>
+      <h2><a href="../3/index.html">ЖУРНАЛ</a></h2>
+      <h2><a href="../4/index.html">ВИДЕО</a></h2>
+      <h2><a href="../5/index.html">НОВОСТИ</a></h2>
+      <h2>О НАС</h2>
+    </div>
+    <div class="box1">
+      <div class="ellipse4"></div>
+      <div class="ellipse5"></div>
+      <div class="ellipse6"></div>
+      <div class="ellipse7"></div>
+      <div class="ellipse8"></div>
+      <div class="ellipse9"></div>
+      <h1>О НАС</h1>
+      <p class="txt">Компания существует с&nbsp;сентября 2019&nbsp;года. Наш, несомненно, молодой и&nbsp;яркий нрав позволяет создавать много нового и&nbsp;интересного контента.<br>Мы&nbsp;разработали три основных типа гипноза, На&nbsp;принципе разделения этих типов мы&nbsp;спостроили весь контент телекананла.</p>
+      <div class="main-news">
+        <img src="../../img/6/1.png" alt="СЛАБЫЙ ГИПНОЗ">
+        <div class="text1">
+          <h4>Легкая степень</h4>
+          <p>Легкую степень гипноза можно увидеть на&nbsp;телеканале в&nbsp;утреннее время суток. С&nbsp;5&nbsp;утра до&nbsp;полудня. В&nbsp;программе встречаются новостные передачи, развивающие программы, истории о&nbsp;гипнозе и&nbsp;много другого, что поможет вам с&nbsp;утра включить мозг и&nbsp;отправиться по&nbsp;делам.</p>
+          <p>В&nbsp;новостях зритель может увидеть свежие события, которые произошли в&nbsp;мире на&nbsp;кануне. В&nbsp;интелектуальной части ведется много рассказов о&nbsp;типах гипноза и&nbsp;о&nbsp;том, как он&nbsp;вообще работает. Также можно больше узнать о&nbsp;истории появления гипнотических практик и&nbsp;понять, кто их&nbsp;придумал.</p>
+          <p>Но&nbsp;как&nbsp;же проявляется гипноз самого телеканала? Для легкой степени достаточно лишь заинтересовать зрителя на&nbsp;столько, чтобы он&nbsp;не&nbsp;отрывался от&nbsp;экрана на&nbsp;рекламный перерыв, во&nbsp;время которого как раз таки появляются гипнотические заставки.</p>
 
+
+        </div>
+      </div>
+      <div class="wow" >
+        <div class="text1">
+          <h4>Средняя степень</h4>
+          <p>Средний гипноз делит контент на&nbsp;две части. С&nbsp;полудня до&nbsp;7&nbsp;вечера преобладает развлекательный контент. А&nbsp;после до&nbsp;полуночи&nbsp;&mdash; расслабляющий.</p>
+          <p>В&nbsp;первую половину зритель только начинает рабочий день или выходной, поэтому на&nbsp;канале появляются моменты поощрения максимальной активности дня.</p>
+          <p>Смешные ролики про людей, которые случайно попали под гипноз, развлекательные программы о&nbsp;моментах создания новых техник гипноза, жизнь телеканала и&nbsp;много много другого, что непременнно поможет поднять настроение!</p>
+          <p>Проявляется гипноз в&nbsp;данный промежуток также как и&nbsp;слабый, но&nbsp;помимо заставок в&nbsp;рекламе, также начинает работу техника 25-го кадра. То&nbsp;есть контент ненавязчиго заставляет зрителя вообще не&nbsp;отходить от&nbsp;экранов на&nbsp;очень долгие промежутки времени.</p>
+        </div>
+        <img src="../../img/6/2.png" alt="Средний ГИПНОЗ">
+      </div>
+      <div class="main-news">
+        <img src="../../img/6/3.png" alt="Сильный ГИПНОЗ">
+        <div class="text1">
+          <h4>Тяжелая степень</h4>
+          <p>Тяжелая степень гипноза начинается в&nbsp;полночь и&nbsp;длится до&nbsp;5&nbsp;утра, то&nbsp;есть практически всю ночь.</p>
+          <p>Так как музыка с&nbsp;предыдущего раздела контента не&nbsp;меняется, зритель не&nbsp;успевает заметить, что что-то изменилась и&nbsp;попадает под настоящеее зомбирование!</p>
+
+        </div>
+      </div>
+
+    </div>
+    <div class="box2-color">
+
+    </div>
+    <div class="box2">
+      <div class="ellipse1"></div>
+      <div class="ellipse2"></div>
+      <div class="ellipse3"></div>
+      <h1>НОВЫЙ ОФИС СТУДИИ</h1>
+      <iframe width="960px" height="633px" src="https://www.youtube.com/embed/R2FPB3yVDJ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+    <div class="box3-color">
+
+    </div>
+    <div class="box3">
+      <h1>КОНТАКТЫ</h1>
+      <p>Номер контактного отдела: +7(999)123-45-67 </p>
+      <p>Электронная почта: zomboyachik@tv.ru</p>
+      <p>Адрес офиса: г. Москва, ул. Радужная, дом&nbsp;19</p>
+    </div>
+
+
+
+
+    <div class="footter">
+      <div class="left">
+        <div class="line">
+          <p><a href="../4/index.html">Видео</a></p>
+          <p><a href="../3/index.html">Журнал</a></p>
+          <p><a href="../../index.html">Главная</a></p>
+        </div>
+        <div class="line">
+          <p><a href="../5/index.html">Новости</a></p>
+          <p><a href="../2/index.html">Телепрограмма</a></p>
+        </div>
+      </div>
+      <div class="right">
+        <div class="icons">
+          <img src="../../img/icons/instagram.png">
+          <img src="../../img/icons/vk.png">
+          <img src="../../img/icons/youtube.png">
+          <img src="../../img/icons/facebook.png">
+          <img src="../../img/icons/tvi.png">
+        </div>
+        <p>&copy;&nbsp;ЗОМБОЯЩИК (2015-2020)</p>
+      </div>
+    </div>
+
+
+    <script src="main.js"></script>
   </body>
 </html>
