переключение дней недели на телепрограмме

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="line">
           <p><a href="pages/4/index.html">Видео</a></p>
           <p><a href="pages/3/index.html">Журнал</a></p>
-          <p><a href="pages/6/index.html">Контакты</a></p>
+          <p><a href="pages/6/index.html#contacts">Контакты</a></p>
         </div>
         <div class="line">
           <p><a href="pages/5/index.html">Новости</a></p>
