--- a/pages/2/week/mon/index.html
+++ b/pages/2/week/mon/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 
-    <script src="../../js/anime.min.js"></script>
+    <script src="../../../../js/anime.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
   </head>
   <body>
@@ -18,12 +18,12 @@
 				</svg>
 		</div>
     <div class="menu">
-      <h2><a href="../../index.html">ЗОМБОЯЩИК</a></h2>
+      <h2><a href="../../../../index.html">ЗОМБОЯЩИК</a></h2>
       <h2>ТЕЛЕПРОГРАММА</h2>
-      <h2><a href="../3/index.html">ЖУРНАЛ</a></h2>
-      <h2><a href="../4/index.html">ВИДЕО</a></h2>
-      <h2><a href="../5/index.html">НОВОСТИ</a></h2>
-      <h2><a href="../6/index.html">О НАС</a></h2>
+      <h2><a href="../../../3/index.html">ЖУРНАЛ</a></h2>
+      <h2><a href="../../../4/index.html">ВИДЕО</a></h2>
+      <h2><a href="../../../5/index.html">НОВОСТИ</a></h2>
+      <h2><a href="../../../6/index.html">О НАС</a></h2>
     </div>
 
     <div class="box">
@@ -46,8 +46,8 @@
       <h1>РАСПИСАНИЕ СЕРИАЛОВ И ПЕРЕДАЧ </h1>
       <h4>Текущая неделя<br>15 июня - 21 июня</h4>
       <div class="week">
-        <h2><a href="week/wed/index.html"><</a></h2>
-        <div class="day">
+        <h2><a href="../sut/index.html"><</a></h2>
+        <div id="tooday" class="day">
           <h2>ПН</h2>
           <p>15 июня</p>
         </div>
@@ -59,7 +59,7 @@
           <h2>СР</h2>
           <p>17 июня</p>
         </div>
-        <div id="tooday" class="day">
+        <div  class="day">
           <h2>ЧТ</h2>
           <p>18 июня</p>
         </div>
@@ -75,119 +75,119 @@
           <h2>ВС</h2>
           <p>21 июня</p>
         </div>
-        <h2><a href="week/fri/index.html">></a></h2>
+        <h2><a href="../tu/index.html">></a></h2>
       </div>
       <div class="line">
         <h2>05:00</h2>
-        <img src="../../img/2/1.png">
+        <img src="../../../../img/2/20.png">
         <h2>Утро России</h2>
       </div>
       <hr>
       <div class="line">
         <h2>09:00</h2>
-        <img src="../../img/2/2.png">
+        <img src="../../../../img/2/19.png">
         <h2>Вести</h2>
       </div>
       <hr>
       <div class="line">
         <h2>09:25</h2>
-        <img src="../../img/2/3.png">
+        <img src="../../../../img/2/18.png">
         <h2>Утро России</h2>
       </div>
       <hr>
       <div class="line">
         <h2>09:55</h2>
-        <img src="../../img/2/4.png">
+        <img src="../../../../img/2/16.png">
         <h2>О самом главном</h2>
       </div>
       <hr>
       <div class="line">
         <h2>11:00</h2>
-        <img src="../../img/2/5.png">
+        <img src="../../../../img/2/14.png">
         <h2>Вести</h2>
       </div>
       <hr>
       <div class="line">
         <h2>11:25</h2>
-        <img src="../../img/2/6.png">
+        <img src="../../../../img/2/13.png">
         <h2>Вести. Местное время</h2>
       </div>
       <hr>
       <div class="line">
         <h2>11:45</h2>
-        <img src="../../img/2/7.png">
+        <img src="../../../../img/2/12.png">
         <h2>Судьба человека с Борисом Корчевниковым</h2>
       </div>
       <hr>
       <div class="line">
         <h2>12:50</h2>
-        <img src="../../img/2/8.png">
+        <img src="../../../../img/2/11.png">
         <h2>60 минут</h2>
       </div>
       <hr>
       <div class="line">
         <h2>14:00</h2>
-        <img src="../../img/2/9.png">
+        <img src="../../../../img/2/10.png">
         <h2>Вести</h2>
       </div>
       <hr>
       <div class="line">
         <h2>14:25</h2>
-        <img src="../../img/2/10.png">
+        <img src="../../../../img/2/9.png">
         <h2>Вести. Местное время</h2>
       </div>
       <hr>
       <div class="line">
         <h2>14:45</h2>
-        <img src="../../img/2/11.png">
+        <img src="../../../../img/2/8.png">
         <h2>Тайны следствия 17. “Конечная остановка”, 1-я и 2-я серии</h2>
       </div>
       <hr>
       <div class="line">
         <h2>17:00</h2>
-        <img src="../../img/2/12.png">
+        <img src="../../../../img/2/7.png">
         <h2>Вести. Местное время</h2>
       </div>
       <hr>
       <div class="line">
         <h2>17:25</h2>
-        <img src="../../img/2/13.png">
+        <img src="../../../../img/2/6.png">
         <h2>60 минут</h2>
       </div>
       <hr>
       <div class="line">
         <h2>18:30</h2>
-        <img src="../../img/2/14.png">
+        <img src="../../../../img/2/5.png">
         <h2>Андрей Балахов. Прямой эфир</h2>
       </div>
       <hr>
       <div class="line">
         <h2>20:00</h2>
-        <img src="../../img/2/15.png">
+        <img src="../../../../img/2/4.png">
         <h2>Вести</h2>
       </div>
       <hr>
       <div class="line">
         <h2>20:45</h2>
-        <img src="../../img/2/16.png">
+        <img src="../../../../img/2/3.png">
         <h2>Вести. Местное время</h2>
       </div>
       <hr>
       <div class="line">
         <h2>21:00</h2>
-        <img src="../../img/2/20.png">
+        <img src="../../../../img/2/2.png">
         <h2>“Измайловский парк”. Большой юмористический концерт. Выпуск от 10 апреля</h2>
       </div>
       <hr>
       <div class="line">
         <h2>23:30</h2>
-        <img src="../../img/2/18.png">
+        <img src="../../../../img/2/1.png">
         <h2>Расплата за счастье</h2>
       </div>
       <hr>
       <div class="line">
         <h2>03:15</h2>
-        <img src="../../img/2/19.png">
+        <img src="../../../../img/2/19.png">
         <h2>Таблетка от слез</h2>
       </div>
       <hr>
@@ -199,23 +199,23 @@
     <div class="footter">
       <div class="left">
         <div class="lineb">
-          <p><a href="../../index.html">Главная</a></p>
-          <p><a href="../3/index.html">Журнал</a></p>
-          <p><a href="../6/index.html#contacts">Контакты</a></p>
+          <p><a href="../../../../index.html">Главная</a></p>
+          <p><a href="../../../3/index.html">Журнал</a></p>
+          <p><a href="../../../6/index.html#contacts">Контакты</a></p>
         </div>
         <div class="lineb">
-          <p><a href="../5/index.html">Новости</a></p>
-          <p><a href="../6/index.html">О нас</a></p>
-          <p><a href="../4/index.html">Видео</a></p>
+          <p><a href="../../../5/index.html">Новости</a></p>
+          <p><a href="../../../6/index.html">О нас</a></p>
+          <p><a href="../../../4/index.html">Видео</a></p>
         </div>
       </div>
       <div class="right">
         <div class="icons">
-          <img src="../../img/icons/instagram.png">
-          <img src="../../img/icons/vk.png">
-          <img src="../../img/icons/youtube.png">
-          <img src="../../img/icons/facebook.png">
-          <img src="../../img/icons/tvi.png">
+          <img src="../../../../img/icons/instagram.png">
+          <img src="../../../../img/icons/vk.png">
+          <img src="../../../../img/icons/youtube.png">
+          <img src="../../../../img/icons/facebook.png">
+          <img src="../../../../img/icons/tvi.png">
         </div>
         <p>&copy;&nbsp;ЗОМБОЯЩИК (2015-2020)</p>
       </div>
