--- a/pages/6/index.html
+++ b/pages/6/index.html
@@ -80,7 +80,7 @@
     <div class="box3-color">
 
     </div>
-    <div class="box3">
+    <div id="contacts" class="box3">
       <h1>КОНТАКТЫ</h1>
       <p>Номер контактного отдела: +7(999)123-45-67 </p>
       <p>Электронная почта: zomboyachik@tv.ru</p>
