--- a/pages/3/index.html
+++ b/pages/3/index.html
@@ -119,7 +119,7 @@
         <div class="line">
           <p><a href="../../index.html">Главная</a></p>
           <p><a href="../2/index.html">Телепрограмма</a></p>
-          <p><a href="../6/index.html">Контакты</a></p>
+          <p><a href="../6/index.html#contacts">Контакты</a></p>
         </div>
         <div class="line">
           <p><a href="../5/index.html">Новости</a></p>
